style/card.css
/* -- CARD -- */

.card-container{
    display: flex;
    justify-content: space-around;
    flex-wrap: wrap;
    gap: 2em;
    padding: 3em 0;
}

.card {
    width: 30vw;
    padding: 1em 2em;
    background-color: var(--background-color-dark);
    color: var(--white);
    border-radius: 10px;
    text-align: left;
    position: relative;
    box-shadow: -5px 5px 30px black;
}

.card-header{
    text-align: left;
    padding: 0.2em 0 0.5em 0;
}

.card-title{
    font-size: 1.25rem;
}

.card-content {
    text-align: left;
    padding: 0 0 0.75em 0;
    line-height: 1.5em;
    font-size: 0.9em;
}

.card-image {
    border-radius: 10px;
}


.card-image img {
    width: 100%;
    height: 100%;
    object-fit: cover;
    border-radius: 10px;
    margin: 1rem auto;
    box-shadow: 0 5px 20px black;
    aspect-ratio: 2/1;
}

.card-description {
    padding: 0.5em 0;
    font-size: 1rem;
}

.card-footer {
    padding: 0.5em 0;
}

.card-button {
    background-color: transparent;
    border: none;
    cursor: pointer;
    transition: background-color 0.5s, height 0.5s;
    margin-right: 2vw;
}

.card-button img {
    width: 36px;
    height: 36px;
}

.card-button img:hover, .social-icons img:hover {
    animation: shake-rotate 0.5s;
}

@property --angle {
    syntax: "<angle>";
    initial-value: 0deg;
    inherits: false;
}
.card::after, .card::before{
    content: '';
    width: 100%;
    height: 100%;
    /*background: linear-gradient(90deg, #a8dadc 30%, #457b9d 50%, #1d3557);*/
    /*background-image: conic-gradient(#f72585, #7209b7, #3a0ca3, #4361ee, #4cc9f0, #f72585);*/
    background-image: conic-gradient(from var(--angle),
    transparent 1%,
    var(--primary-blue), var(--primary-light-blue), var(--card-white), var(--primary-blue));
    position: absolute;
    top: 50%;
    left: 50%;
    translate: -50% -50%;
    border-radius: 10px;
    z-index: -1;
    animation: 10s spin linear infinite;
}

.card::before{
    filter: blur(6rem);
    opacity: 1;
}


@keyframes spin {
    from {
        --angle: 0deg;
    }
    to {
        --angle: 360deg;
    }
}

